--- a/views/login.ejs
+++ b/views/login.ejs
@@ -47,7 +47,7 @@ button{
     <main>
     <form action="/login" method="post">
      <h1>Login</h1>
-        <input type="email" name="email" placeholder="Email" value="<%= locals.email%>">
+        <input type="email" name="email" placeholder="Email" value="<%= locals.email%>" required>
         <input type="password" name="password" placeholder="Password">
         <p class="error"><%= locals.message%></p>
      <button type="submit">Login</button>
